[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameParts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://GameParts/Menu/ItemSlot.tscn" type="PackedScene" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 0.25
anchor_bottom = 0.25
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
scale = Vector2( 0.25, 0.25 )
transform = Transform2D( 0.25, 0, 0, 0.25, 0, 0 )

[node name="Back" type="Panel" parent="CanvasLayer"]
modulate = Color( 1, 0, 0.843137, 0.513726 )
margin_right = 720.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
scale = Vector2( 0.25, 0.25 )
transform = Transform2D( 0.25, 0, 0, 0.25, 0, 0 )

[node name="Layout" type="Control" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer2/Layout"]
margin_left = 37.1394
margin_top = 606.651
margin_right = 98.1394
margin_bottom = 626.651
rect_scale = Vector2( 4, 4 )
text = "resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="ColorRect" parent="CanvasLayer2/Layout"]
margin_left = 547.534
margin_top = 127.389
margin_right = 698.534
margin_bottom = 270.389
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot" parent="CanvasLayer2/Layout/Panel" instance=ExtResource( 2 )]
margin_left = 32.3406
margin_top = 32.6812
margin_right = -98.6594
margin_bottom = -90.3188
isActiveItem = true

[node name="Panel2" type="ColorRect" parent="CanvasLayer2/Layout"]
margin_left = 346.915
margin_top = 469.608
margin_right = 497.915
margin_bottom = 612.608
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot2" parent="CanvasLayer2/Layout/Panel2" instance=ExtResource( 2 )]
margin_left = 36.965
margin_top = 30.965
margin_right = -94.035
margin_bottom = -92.035
isTrashCan = true

[node name="Panel3" type="ColorRect" parent="CanvasLayer2/Layout"]
margin_left = 550.525
margin_top = 281.262
margin_right = 701.525
margin_bottom = 705.262
color = Color( 0, 0.717647, 0.517647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Invetnory" type="VBoxContainer" parent="CanvasLayer2/Layout"]
margin_left = 572.0
margin_top = 292.0
margin_right = 598.0
margin_bottom = 393.0
rect_scale = Vector2( 4, 4 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot1" parent="CanvasLayer2/Layout/Invetnory" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 1.0
margin_right = 23.0
margin_bottom = 21.0
rect_scale = Vector2( 1, 1 )

[node name="ItemSlot2" parent="CanvasLayer2/Layout/Invetnory" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 27.0
margin_right = 23.0
margin_bottom = 47.0
rect_scale = Vector2( 1, 1 )

[node name="ItemSlot3" parent="CanvasLayer2/Layout/Invetnory" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 53.0
margin_right = 23.0
margin_bottom = 73.0
rect_scale = Vector2( 1, 1 )

[node name="ItemSlot4" parent="CanvasLayer2/Layout/Invetnory" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 79.0
margin_right = 23.0
margin_bottom = 99.0
rect_scale = Vector2( 1, 1 )

[node name="Preview" type="Panel" parent="CanvasLayer2/Layout"]
margin_left = 27.0
margin_top = 26.0
margin_right = 508.0
margin_bottom = 445.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer2/Layout/Preview"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_right = -299.0
margin_bottom = -314.0
rect_scale = Vector2( 4, 4 )
text = "bcbvcbcvbvc
cvbcbcvb dfdf
bcvbc-vbvcb
gfgd fgfdgdgr 
gdfgdgdf erere
dfgdgdf ww545"
align = 3
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer2/Layout"]
margin_left = 539.472
margin_top = 4.29552
margin_right = 650.472
margin_bottom = 73.2955
rect_scale = Vector2( 4, 4 )
text = "active
 item"

[node name="Label2" type="Label" parent="CanvasLayer2/Layout"]
margin_left = 304.621
margin_top = 627.149
margin_right = 415.621
margin_bottom = 696.149
rect_scale = Vector2( 4, 4 )
text = "trash can"
[connection signal="pressed" from="CanvasLayer2/Layout/Button" to="." method="_on_Button_pressed"]
[connection signal="minimum_size_changed" from="CanvasLayer2/Layout/Panel/ItemSlot" to="." method="_on_ItemSlot_minimum_size_changed"]
